Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   transition: 100ms linear all;
+  overflow: hidden;
 }
 .AppBackgroundOverlay {
   background: linear-gradient(to bottom, rgba(101, 88, 54, 0.68) 0%,rgba(49, 45, 19, 0.87) 100%);
